2024-09-06T01:05:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10730617111 # 817
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-06
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3249 / 0 3251 / +0 +2

2024-09-03T12:27:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10682901362 # 812
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-03
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3245 / 0 3249 / +0 +4

2024-08-30T01:05:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10625026694 # 803
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-08-30
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3243 / 0 3245 / +0 +2

2024-08-29T12:27:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10615015250 # 802
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-08-29
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3242 / 0 3243 / +0 +1

2024-08-25T12:24:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10546895430 # 794
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-08-25
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3240 / 0 3242 / +0 +2

2024-08-24T12:24:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10538456873 # 792